fixed all alt in <a> tag, removed prefixed gradient css, and corrected margin collapsing in column-count from Tony and Turtle

--- a/askie/css/style.css
+++ b/askie/css/style.css
@@ -32,10 +32,6 @@ p {
 h1, h2 {
     font-weight: 500;
     margin: 0;
-    margin-block-start: 0;
-    margin-block-end: 0;
-    -webkit-margin-before: 0;
-    -webkit-margin-after: 0;
 }
 
 h1 {
@@ -144,17 +140,18 @@ header .header__menu {
     max-width: 400px;
 }
 
-.index-content__words p {
-    padding: 15px 0; /* margin collapsing */
-}
-
-.index-content--2-column {
+.index-content__article {
     -webkit-column-count: 2; /* Chrome, Safari, Opera */
     -moz-column-count: 2; /* Firefox */
     column-count: 2;
     -webkit-column-gap: 5%; /* Chrome, Safari, Opera */
     -moz-column-gap: 5%; /* Firefox */
     column-gap: 5%;
+    margin-top: 40px;
+}
+
+.index-content__words p {
+    margin-bottom: 40px; /* margin collapsing */
 }
 
 .call-to-action-box {
@@ -173,13 +170,7 @@ header .header__menu {
     padding: 15px 0;
     width: 100%;
     background: #f57f00;
-    background: -moz-linear-gradient(top, #fac873 0%, #ffb133 50%, #f57f00 51%, #f57f00 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, #fac873), color-stop(50%, #ffb133), color-stop(51%, #f57f00), color-stop(100%, #fac873));
-    background: -webkit-linear-gradient(top, #fac873 0%, #ffb133 50%, #f57f00 51%, #f57f00 100%);
-    background: -o-linear-gradient(top, #fac873 0%, #ffb133 50%, #f57f00 51%, #f57f00 100%);
-    background: -ms-linear-gradient(top, #fac873 0%, #ffb133 50%, #f57f00 51%, #f57f00 100%);
-    background: linear-gradient(to bottom, #fac873 0%, #ffb133 50%, #f57f00 51%, #f57f00 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fac873', endColorstr='#fac873', GradientType=0 );
+    background: linear-gradient(to bottom, #fac873 0%, #ffb133 50%, #f57f00 51%);
     cursor: pointer;
 }
 
